--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ jobs:
         - chmod +x docker-compose
         - sudo mv docker-compose /usr/local/bin
       install:
-      - docker load -i docker/node.tar
-      - docker load -i docker/redis.tar
-      - docker load -i docker/postgres.tar
+      - docker load -i docker/node.tar || true
+      - docker load -i docker/redis.tar || true
+      - docker load -i docker/postgres.tar || true
       - docker images
       - npm i -g lerna
       - npm install file:client --prefix examples/cv
