chore: lerna commit message

--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
+  "command": {
+    "version": {
+      "message": "Lerna publishing new version"
+    }
+  },
   "packages": [
     "app",
     "client",
