--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,12 @@ jobs:
     - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
+    - if ! [ -x "$(command -v lerna)" ]; then npm install -g lerna; fi
     install:
     - docker load -i docker/node.tar || true
     - docker load -i docker/redis.tar || true
     - docker load -i docker/postgres.tar || true
     - docker images
-    - npm i -g lerna
     - npm install file:client --prefix examples/cv
     - npm run install
     test: skip
