chore: cache .nvm dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
     - npm
     - directories:
       - docker
+      - .nvm
     language: node_js
     services:
     # Require docker to be running in the build context
