--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ jobs:
     - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
+    - ls -la /home/travis/.nvm/versions/node/v10.15.3/bin/
     - if ! [ -x "$(command -v lerna)" ]; then npm install -g lerna; fi
     install:
     - docker load -i docker/node.tar || true
