--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,10 @@ jobs:
     - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
-    - ls -la /home/travis/.nvm/versions/node/v10.15.3/bin/
+    - NODE_VERSION=`node --version`
+    - ln -s /home/travis/.nvm/versions/node/$(NODE_VERSION)/lib/node_modules/lerna/cli.js /home/travis/.nvm/versions/node/$(NODE_VERSION)/bin/lerna
+    - ls -la /home/travis/.nvm/versions/node/$(NODE_VERSION)/bin/
+    - command -v lerna
     - if ! [ -x "$(command -v lerna)" ]; then npm install -g lerna; fi
     install:
     - docker load -i docker/node.tar || true
