--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ jobs:
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
     - NODE_VERSION=`node --version`
-    - ln -s /home/travis/.nvm/versions/node/$(NODE_VERSION)/lib/node_modules/lerna/cli.js /home/travis/.nvm/versions/node/$(NODE_VERSION)/bin/lerna
-    - ls -la /home/travis/.nvm/versions/node/$(NODE_VERSION)/bin/
+    - ln -s /home/travis/.nvm/versions/node/$NODE_VERSION/lib/node_modules/lerna/cli.js /home/travis/.nvm/versions/node/$NODE_VERSION/bin/lerna
+    - ls -la /home/travis/.nvm/versions/node/$NODE_VERSION/bin/
     - command -v lerna
     - if ! [ -x "$(command -v lerna)" ]; then npm install -g lerna; fi
     install:
