--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ jobs:
     - NODE_VERSION=`node --version`
     - ln -s /home/travis/.nvm/versions/node/$NODE_VERSION/lib/node_modules/lerna/cli.js /home/travis/.nvm/versions/node/$NODE_VERSION/bin/lerna
     - ls -la /home/travis/.nvm/versions/node/$NODE_VERSION/bin/
+    - ls -la /home/travis/.nvm/versions/node/$NODE_VERSION/lib/node_modules/lerna/
+    - ls -la /home/travis/.nvm/versions/node/v10.15.3/lib/node_modules/lerna/
     - echo $PATH
     - which lerna
     - command -v lerna
