--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ jobs:
   - stage: "lint-and-e2e"
     name: "Lint and run end-to-end tests"
     cache:
-    - npm
     - directories:
       - docker
       - .nvm
@@ -27,9 +26,9 @@ jobs:
     - ls -la /home/travis/.nvm/versions/node/$NODE_VERSION/bin/
     - ls -la /home/travis/.nvm/versions/node/$NODE_VERSION/lib/node_modules/lerna/
     - ls -la /home/travis/.nvm/versions/node/v10.15.3/lib/node_modules/lerna/
-    - echo $PATH
-    - which lerna
-    - command -v lerna
+    - echo $PATH || true
+    - which lerna || true
+    - command -v lerna || true
     - if ! [ -x "$(command -v lerna)" ]; then echo "lerna is NOT an executable!????"; fi
     - if ! [ -x "$(command -v lerna)" ]; then npm install -g lerna; fi
     install:
