--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "audit": "lerna exec --parallel -- npm audit",
     "audit:fix": "lerna exec --parallel -- npm audit fix",
     "clean": "lerna clean",
-    "install": "lerna exec --parallel -- npm ci",
+    "ci": "lerna exec --parallel -- npm ci",
+    "install": "lerna exec --parallel -- npm install",
     "lint": "lerna exec --parallel -- npm run lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "npm run test:unit && npm run test:e2e",
