Revert "chore: just trying something new"
This reverts commit 359bb5cb0f2383db2735ea87e739ce6167a74306.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "audit": "lerna exec --parallel -- npm audit",
     "audit:fix": "lerna exec --parallel -- npm audit fix",
     "clean": "lerna clean",
-    "ci": "lerna exec --parallel -- npm ci",
-    "install": "lerna exec --parallel -- npm install",
+    "install": "lerna exec --parallel -- npm ci",
     "lint": "lerna exec --parallel -- npm run lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "npm run test:unit && npm run test:e2e",
