--- a/.travis.yml
+++ b/.travis.yml
@@ -81,7 +81,7 @@ stages:
 - name: lint-and-e2e
   if: branch != master
 - name: deliver
-  if: (branch = master AND type != pull_request) OR tag IS present
+  if: branch != master # TODO: for testing on CI! make sure to change this back before merging with master!
 
 notifications:
   email:
