--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install": "lerna exec --parallel -- npm ci",
     "lint": "lerna exec --parallel -- npm run lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:e2e": "sh -c 'cd ./e2e && ./script.sh'",
     "test:unit": "lerna exec --parallel -- npm test",
     "update": "lerna exec --parallel -- npm i",
