Make natreg Dockerfile relative to project base directory Hopefully it will now work with the travis scripts

--- a/examples/national-registration/Dockerfile
+++ b/examples/national-registration/Dockerfile
@@ -4,16 +4,18 @@ FROM node:10-alpine
 ENV USER=natreg-user
 RUN adduser --disabled-password --gecos "" $USER
 
+ADD ./client /app/client
+
 # Create app dir
-WORKDIR /app
+WORKDIR /app/examples/national-registration
 
 # Install app dependencies
-COPY package.json /app
-COPY package-lock.json /app
+COPY ./examples/national-registration/package.json /app/examples/national-registration
+COPY ./examples/national-registration/package-lock.json /app/examples/national-registration
 RUN npm ci
 
 # Bundle app source
-COPY . /app
+COPY ./examples/national-registration/ /app/examples/national-registration
 
 USER $USER
 CMD [ "node", "server.js" ]
