--- a/examples/national-registration/package.json
+++ b/examples/national-registration/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint '**/*.js'"
   },
   "dependencies": {
-    "@mydata/client": "0.24.1",
+    "@mydata/client": "file:../../client",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "elastic-apm-node": "^2.9.0",
