Began work client reg and auth req flow with JWTs

--- a/operator/package.json
+++ b/operator/package.json
@@ -40,8 +40,11 @@
     "ioredis": "^3.2.2",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
+    "jwk-lite": "^0.1.2",
     "jwks-manager": "^0.9.1",
     "jwks-provider": "^0.1.0",
+    "jws-lite": "^0.1.1",
+    "jwt-lite": "^1.1.2",
     "memory-fs": "^0.4.1",
     "merge": "^1.2.1",
     "moment": "^2.24.0",
