--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -151,6 +151,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-securerandom')
     implementation project(':@react-native-community_async-storage')
     compile project(':react-native-svg')
     compile project(':react-native-device-info')
