--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'MyData'
+include ':react-native-securerandom'
+project(':react-native-securerandom').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-securerandom/android')
 include ':@react-native-community_async-storage'
 project(':@react-native-community_async-storage').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/async-storage/android')
 include ':react-native-svg'
