--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,8 @@
     "buffer": "^5.2.1",
     "eventemitter3": "^3.1.0",
     "js-base64": "^2.5.1",
+    "jwk-lite": "^0.1.2",
+    "jwt-lite": "^1.1.2",
     "react": "16.8.6",
     "react-native": "^0.59.2",
     "react-native-camera": "^2.2.0",
@@ -40,6 +42,7 @@
     "react-native-push-notification": "^3.1.2",
     "react-native-qrcode-scanner": "^1.1.2",
     "react-native-rsa-native": "^1.0.24",
+    "react-native-securerandom": "^0.3.0",
     "react-native-svg": "^9.2.4",
     "react-native-svg-icon": "^0.8.1",
     "react-native-svg-uri": "^1.2.3",
