--- a/client/package.json
+++ b/client/package.json
@@ -34,11 +34,17 @@
     "http-errors": "^1.7.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
+    "jwk-lite": "^0.1.2",
     "jwks-provider": "^0.1.0",
+    "jws": "^3.2.2",
+    "jwt-lite": "^1.1.2",
     "moment": "^2.24.0",
-    "ramda": "^0.26.1"
+    "ramda": "^0.26.1",
+    "rfc4648": "^1.2.0",
+    "rsa-pem-to-jwk": "^1.1.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/moment": "^2.13.0",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
