--- a/examples/cv/package.json
+++ b/examples/cv/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "start": "node server.js",
-    "dev": "nodemon --watch ./api --watch ./components --watch ./pages --watch ./services --watch server.js",
+    "dev": "nodemon --watch ./api --watch ./components --watch ./pages --watch ./services --watch server.js --watch ../../client/lib",
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watchAll",
     "lint": "eslint '**/*.js'"
