--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@react-native-community/async-storage": "^1.2.4",
+    "@react-native-community/async-storage": "^1.3.4",
     "@types/js-base64": "^2.3.1",
     "axios": "^0.18.0",
     "buffer": "^5.2.1",
@@ -55,6 +55,8 @@
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-transform-flow-strip-types": "^7.2.3",
     "@babel/runtime": "^7.3.1",
+    "@peculiar/webcrypto": "^1.0.10",
+    "@trust/webcrypto": "^0.9.2",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.7.22",
@@ -77,6 +79,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.16.4",
+    "isomorphic-webcrypto": "^1.6.1",
     "jest": "24.5.0",
     "lolex": "^3.1.0",
     "metro-react-native-babel-preset": "^0.53.1",
