--- a/client/package.json
+++ b/client/package.json
@@ -28,20 +28,17 @@
   },
   "homepage": "https://github.com/JobtechSwe/mydata/client#readme",
   "dependencies": {
+    "@panva/jose": "^1.0.1",
     "axios": "^0.18.0",
     "case": "^1.6.1",
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
-    "jwk-lite": "^0.1.2",
     "jwks-provider": "^0.1.0",
     "jws": "^3.2.2",
-    "jwt-lite": "^1.1.2",
     "moment": "^2.24.0",
-    "ramda": "^0.26.1",
-    "rfc4648": "^1.2.0",
-    "rsa-pem-to-jwk": "^1.1.3"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.2",
