--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@react-native-community/async-storage": "^1.3.4",
+    "@react-native-community/async-storage": "1.3.2",
     "@types/js-base64": "^2.3.1",
     "axios": "^0.18.0",
     "buffer": "^5.2.1",
