--- a/messaging/package.json
+++ b/messaging/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mydata/client",
-  "version": "0.25.2",
-  "description": "Client for MyData Operator",
+  "name": "@mydata/messaging",
+  "version": "0.1.0",
+  "description": "Internal messaging protocol for MyData client, operator and app",
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
@@ -26,24 +26,11 @@
   "bugs": {
     "url": "https://github.com/JobtechSwe/mydata/issues"
   },
-  "homepage": "https://github.com/JobtechSwe/mydata/client#readme",
+  "homepage": "https://github.com/JobtechSwe/mydata/messaging#readme",
   "dependencies": {
-    "@mydata/messaging": "file:../messaging",
-    "@panva/jose": "^1.0.1",
-    "axios": "^0.18.0",
-    "case": "^1.6.1",
-    "express": "^4.16.4",
-    "http-errors": "^1.7.1",
-    "joi": "^14.3.1",
-    "jsonwebtoken": "^8.4.0",
-    "jwks-provider": "^0.1.0",
-    "jws": "^3.2.2",
-    "moment": "^2.24.0",
-    "ramda": "^0.26.1"
+    "joi": "^14.3.1"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/moment": "^2.13.0",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
@@ -51,10 +38,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
-    "supertest": "^3.4.2",
-    "tar": "^4.4.8",
-    "uuid": "^3.3.2"
+    "jest": "^23.6.0"
   },
   "jest": {
     "testEnvironment": "node",
