fix: 🐛 Operator now use @panva/jose instead of jw*-lite

--- a/operator/package.json
+++ b/operator/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/JobtechSwe/mydata#readme",
   "dependencies": {
     "@mydata/messaging": "file:../messaging",
+    "@panva/jose": "^1.0.1",
     "axios": "^0.18.0",
     "change-case": "^3.1.0",
     "changecase-objects": "^1.1.0",
@@ -41,11 +42,8 @@
     "ioredis": "^3.2.2",
     "joi": "^13.7.0",
     "jsonwebtoken": "^8.3.0",
-    "jwk-lite": "^0.1.2",
     "jwks-manager": "^0.9.1",
     "jwks-provider": "^0.1.0",
-    "jws-lite": "^0.1.1",
-    "jwt-lite": "^1.1.2",
     "memory-fs": "^0.4.1",
     "merge": "^1.2.1",
     "moment": "^2.24.0",
