--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "@mydata/messaging": "file:../messaging",
     "@panva/jose": "^1.0.1",
     "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
     "case": "^1.6.1",
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
