--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ jobs:
     # Require docker to be running in the build context
     - docker
     before_install:
-    # Install a fresh version of docker-compose
+    # Install a newer version of docker-compose than the one provided by Travis
     - sudo rm /usr/local/bin/docker-compose
     - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
     - chmod +x docker-compose
@@ -27,14 +27,13 @@ jobs:
     - docker load -i ~/.cache/docker/node.tar || true
     - docker load -i ~/.cache/docker/redis.tar || true
     - docker load -i ~/.cache/docker/postgres.tar || true
-    - docker images
     - npm install file:client --prefix examples/cv
+    - npm install file:client --prefix examples/national-registration
     - npm run install
     test: skip
     script:
     - npm run lint
     - npm run test:e2e
-    - docker images
     - docker save node -o ~/.cache/docker/node.tar
     - docker save redis -o ~/.cache/docker/redis.tar
     - docker save postgres -o ~/.cache/docker/postgres.tar
@@ -47,7 +46,7 @@ jobs:
     - directories:
       - ~/.cache/docker
     install:
-    # Install a fresh version of the openshift cli
+    # Install a new version of the openshift cli
     - mkdir -p /opt/openshift
     - wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
     - export PATH=$PATH:/opt/openshift
@@ -68,8 +67,14 @@ jobs:
     - if [ ! -z "$TRAVIS_TAG" ]; then export PHASE="test"; fi
 
     - bash .deliver-$PHASE.bash app/ jobtechswe/mydata-app
-    - bash .deliver-$PHASE.bash . jobtechswe/mydata-cv examples/cv/Dockerfile
     - bash .deliver-$PHASE.bash operator/ jobtechswe/mydata-operator
+    - bash .deliver-$PHASE.bash . jobtechswe/mydata-cv examples/cv/Dockerfile
+    - bash .deliver-$PHASE.bash . jobtechswe/mydata-natreg examples/national-registration/Dockerfile
+
+    - echo "Redeploying..."
+    - oc rollout latest operator-$PHASE -n mydata
+    - oc rollout latest cv-$PHASE -n mydata
+    - oc rollout latest natreg-$PHASE -n mydata
 
     # ...and finally remove cached credentials
     - oc logout
