--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ jobs:
     - npm install file:client --prefix examples/national-registration
     - npm run install
     script:
+    - npm run lint
     - docker save node -o ~/.cache/docker/node.tar
     - docker save redis -o ~/.cache/docker/redis.tar
     - docker save postgres -o ~/.cache/docker/postgres.tar
