--- a/app/package.json
+++ b/app/package.json
@@ -31,8 +31,8 @@
     "js-base64": "^2.5.1",
     "jwk-lite": "^0.1.2",
     "jwt-lite": "^1.1.2",
-    "react": "16.8.6",
-    "react-native": "^0.59.2",
+    "react": "16.8.3",
+    "react-native": "0.59.8",
     "react-native-camera": "^2.2.0",
     "react-native-collapsible": "^1.4.0",
     "react-native-config": "^0.11.7",
