--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "url": "https://github.com/JobtechSwe/mydata/issues"
   },
   "homepage": "https://github.com/JobtechSwe/mydata#readme",
-  "version": "0.25.1"
+  "version": "0.25.1",
+  "dependencies": {
+    "pem-jwk": "^2.0.0"
+  }
 }
