--- a/app/package.json
+++ b/app/package.json
@@ -22,12 +22,15 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@react-native-community/async-storage": "^1.2.4",
+    "@mydata/messaging": "file:../messaging",
+    "@react-native-community/async-storage": "1.2.4",
     "@types/js-base64": "^2.3.1",
     "axios": "^0.18.0",
     "buffer": "^5.2.1",
     "eventemitter3": "^3.1.0",
     "js-base64": "^2.5.1",
+    "jwk-lite": "^0.1.2",
+    "jwt-lite": "^1.1.2",
     "react": "16.8.6",
     "react-native": "^0.59.2",
     "react-native-camera": "^2.2.0",
@@ -40,6 +43,7 @@
     "react-native-push-notification": "^3.1.2",
     "react-native-qrcode-scanner": "^1.1.2",
     "react-native-rsa-native": "^1.0.24",
+    "react-native-securerandom": "^0.3.0",
     "react-native-svg": "^9.2.4",
     "react-native-svg-icon": "^0.8.1",
     "react-native-svg-uri": "^1.2.3",
@@ -52,6 +56,8 @@
     "@babel/plugin-proposal-decorators": "^7.3.0",
     "@babel/plugin-transform-flow-strip-types": "^7.2.3",
     "@babel/runtime": "^7.3.1",
+    "@peculiar/webcrypto": "^1.0.10",
+    "@trust/webcrypto": "^0.9.2",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.7.22",
@@ -74,6 +80,7 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.16.4",
+    "isomorphic-webcrypto": "^1.6.1",
     "jest": "24.5.0",
     "lolex": "^3.1.0",
     "metro-react-native-babel-preset": "^0.53.1",
