--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -151,12 +151,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-camera')
     implementation project(':react-native-securerandom')
     implementation project(':@react-native-community_async-storage')
     compile project(':react-native-svg')
     compile project(':react-native-device-info')
     compile project(':react-native-gesture-handler')
-    compile project(':react-native-camera')
     compile project(':react-native-rsa-native')
     compile project(':react-native-config')
     compile project(':react-native-push-notification')
