--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ env:
 jobs:
   include:
   # lint and run end-to-end tests
-  - stage: "lint-and-e2e"
-    name: "Lint and run end-to-end tests"
+  - stage: "lint-and-test"
+    name: "Lint, run end-to-end and integration tests"
     cache:
-    - directories:
+      npm: true
+      directories:
       - ~/.cache/docker
-      - ~/.npm
       - ~/.nvm
     language: node_js
     services:
@@ -30,10 +30,10 @@ jobs:
     - npm install file:client --prefix examples/cv
     - npm install file:client --prefix examples/national-registration
     - npm run install
-    test: skip
     script:
     - npm run lint
     - npm run test:e2e
+    after_script:
     - docker save node -o ~/.cache/docker/node.tar
     - docker save redis -o ~/.cache/docker/redis.tar
     - docker save postgres -o ~/.cache/docker/postgres.tar
@@ -43,14 +43,13 @@ jobs:
     name: "Build and deploy code that has been updated"
     language: node_js
     cache:
-    - directories:
+      directories:
       - ~/.cache/docker
     install:
     # Install a new version of the openshift cli
     - mkdir -p /opt/openshift
     - wget -qO- https://github.com/openshift/origin/releases/download/v3.11.0/openshift-origin-client-tools-v3.11.0-0cbc58b-linux-64bit.tar.gz | tar xvzf - -C /opt/openshift --strip-components=1
     - export PATH=$PATH:/opt/openshift
-    test: skip
     services:
     # Require docker to be running in the build context
     - docker
@@ -75,7 +74,7 @@ jobs:
     - oc rollout latest operator-$PHASE -n mydata
     - oc rollout latest cv-$PHASE -n mydata
     - oc rollout latest natreg-$PHASE -n mydata
-
+    after_script:
     # ...and finally remove cached credentials
     - oc logout
     - docker logout
@@ -83,7 +82,7 @@ jobs:
 # Flow control
 # This section defines the order in which stages are run and when to run certain stages
 stages:
-- name: lint-and-e2e
+- name: lint-and-test
   if: branch != master
 - name: deliver
   if: (branch = master AND type != pull_request) OR tag IS present
