--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
   ],
   "license": "Apache-2.0",
   "dependencies": {
-    "@mydata/messaging": "file:../messaging",
+    "@mydata/messaging": "file:mydata-messaging-0.1.0.tgz",
     "@react-native-community/async-storage": "1.4.0",
     "@types/js-base64": "^2.3.1",
     "axios": "^0.18.0",
