--- a/messaging/package.json
+++ b/messaging/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/JobtechSwe/mydata/messaging#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "joi": "^14.3.1",
+    "joi-browser": "^13.4.0",
     "js-base64": "^2.5.1"
   },
   "devDependencies": {
