--- a/messaging/package.json
+++ b/messaging/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/JobtechSwe/mydata/messaging#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "http-errors": "^1.7.2",
     "joi-browser": "^13.4.0",
     "js-base64": "^2.5.1"
   },
