--- a/messaging/package.json
+++ b/messaging/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mydata/messaging",
+  "name": "@egendata/messaging",
   "version": "0.1.0",
   "description": "Internal messaging protocol for MyData client, operator and app",
   "main": "lib/index.js",
