chore: 🤖 Make package.json point to right place. Update lerna

--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,8 @@
     "client",
     "e2e",
     "examples/*",
-    "operator"
+    "operator",
+    "messaging"
   ],
   "version": "independent",
   "ignoreChanges": [
