--- a/e2e/docker-compose.yml
+++ b/e2e/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     user: ${DC_U}:${DC_G}
     volumes:
       - ./../operator:/app
+      - ./../messaging:/messaging
     ports:
       - 3001:3000
     environment:
