--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "audit": "lerna exec --parallel -- npm audit",
     "audit:fix": "lerna exec --parallel -- npm audit fix",
     "clean": "lerna clean",
-    "install": "lerna exec --parallel -- npm i",
+    "install": "rm examples/cv/package-lock.json && rm examples/national-registration/package-lock.json && lerna exec -- npm i",
     "lint": "lerna exec --parallel -- npm run lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
