--- a/.travis.yml
+++ b/.travis.yml
@@ -23,16 +23,15 @@ jobs:
     - chmod +x docker-compose
     - sudo mv docker-compose /usr/local/bin
     - if ! [ -x "$(command -v lerna)" ]; then npm install -g lerna; fi
+    - sudo apt-get install libgconf-2-4
     install:
     - docker load -i ~/.cache/docker/node.tar || true
     - docker load -i ~/.cache/docker/redis.tar || true
     - docker load -i ~/.cache/docker/postgres.tar || true
-    # - npm install file:client --prefix examples/cv
-    # - npm install file:client --prefix examples/national-registration
     - npm run install
     script:
     - npm run lint
-    # - npm run test:e2e
+    - npm run test:e2e
     after_script:
     - docker save node -o ~/.cache/docker/node.tar
     - docker save redis -o ~/.cache/docker/redis.tar
