chore: update versions

--- a/operator/package.json
+++ b/operator/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@egendata/messaging": "file:../messaging",
     "@panva/jose": "1.0.2",
-    "axios": "0.18.0",
+    "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "change-case": "3.1.0",
     "changecase-objects": "1.1.0",
