--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
     "test:e2e": "sh -c 'cd ./e2e && ./script.sh'",
     "test:unit": "lerna exec --parallel -- npm test",
-    "update": "lerna exec --parallel -- npm i",
+    "update": "lerna exec --parallel -- npm update",
     "version:patch": "lerna version patch",
     "version:minor": "lerna version minor",
     "version:major": "lerna version major"
