Major refactor of key handling and account save

--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'MyData'
+include ':@trackforce_react-native-crypto'
+project(':@trackforce_react-native-crypto').projectDir = new File(rootProject.projectDir, '../node_modules/@trackforce/react-native-crypto/android')
 include ':@react-native-community_async-storage'
 project(':@react-native-community_async-storage').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/async-storage/android')
 include ':react-native-camera'
