--- a/app/android/app/build.gradle
+++ b/app/android/app/build.gradle
@@ -151,6 +151,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@trackforce_react-native-crypto')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-camera')
     implementation project(':react-native-securerandom')
