--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@egendata/messaging": "file:../messaging/egendata-messaging-0.2.0.tgz",
     "@react-native-community/async-storage": "1.4.0",
+    "@trackforce/react-native-crypto": "0.0.8",
     "@types/js-base64": "^2.3.1",
     "axios": "^0.18.0",
     "buffer": "^5.2.1",
