--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/JobtechSwe/mydata/client#readme",
   "dependencies": {
-    "@egendata/messaging": "file:../messaging",
+    "@egendata/messaging": "file:../messaging/egendata-messaging-0.2.0.tgz",
     "@panva/jose": "^1.0.1",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
