--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+    "preandroid": "npx jetify",
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
     "link": "node node_modules/react-native/local-cli/cli.js link",
     "test": "NODE_ENV=test jest",
@@ -73,6 +74,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "express": "^4.16.4",
     "jest": "24.5.0",
+    "jetifier": "^1.6.1",
     "lolex": "^3.1.0",
     "metro-react-native-babel-preset": "^0.53.1",
     "nodemon": "^1.18.10",
