ci: 🎡 change operator build context
using root folder as context since we are using other folders as npm
packages

--- a/operator/Dockerfile
+++ b/operator/Dockerfile
@@ -6,12 +6,17 @@ RUN adduser --disabled-password --gecos "" $USER
 
 WORKDIR /app
 
-COPY package.json /app
-COPY package-lock.json /app
+COPY ./messaging /app/messaging
+
+# If a relative path is provided, it will be relative to the path of the previous WORKDIR instruction
+WORKDIR operator
+
+COPY ./operator/package.json .
+COPY ./operator/package-lock.json .
 RUN npm install --production
 
-COPY /migrations /app/migrations
-COPY /lib /app/lib
+COPY ./operator/migrations ./migrations
+COPY ./operator/lib ./lib
 
 # Use normal user.
 USER $USER
