--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ jobs:
     - if [ ! -z "$TRAVIS_TAG" ]; then export PHASE="test"; fi
 
     - bash .deliver-$PHASE.bash app/ jobtechswe/mydata-app
-    - bash .deliver-$PHASE.bash operator/ jobtechswe/mydata-operator
+    - bash .deliver-$PHASE.bash . jobtechswe/mydata-operator operator/Dockerfile
     - bash .deliver-$PHASE.bash . jobtechswe/mydata-cv examples/cv/Dockerfile
     - bash .deliver-$PHASE.bash . jobtechswe/mydata-natreg examples/national-registration/Dockerfile
 
