Refactor: write/read data (#112)
* test: e2e tests for write and read

* Refactoring token creation to support data read/write

* Changed jwksUrl to jwksURI and eventUrl to eventURI

* Refactoring clientKeys (PEM) -> clientKey (JWK)

* Refactoring clientKeys (PEM) -> clientKey (JWK)

* Data write works in client, working on Operator

* Data write done (but not verified)

* Updated node version

* Reverted to node:12.5.0-alpine bcs Docker b lyin

* Removing uri verification of kid

* Client correctly decrypts data

* Working jest test for read data

* Read & write seems to work all the way

Further implementation in example sites needed to verify

* Data read/write supports several paths

* Read and write works including on Dropbox

* Updated version and messaging from npm

* Using messaging from npm

* Using messaging from npm

* Using @egendata/client from npm

* chore: 🤖 remove old packed versions with wrong links

* chore: 🤖 upgraded messaging dependency

* chore: 🤖 upgrade client and messaging to 0.3.1

--- a/examples/national-registration/package.json
+++ b/examples/national-registration/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint '**/*.js'"
   },
   "dependencies": {
-    "@egendata/client": "file:../../client",
+    "@egendata/client": "0.3.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "elastic-apm-node": "^2.9.0",
