chore: Better handling and documentation of test-scripts. * e2e: Improve the README * e2e: Rename test-scripts to reflect what they do instead of the tool they use. * e2e: Add script `test` as the way of running the shell-script. * e2e: Fix linting in shell script. * Call npm scripts using lerna run instead of exec, and use the e2e:test script. * Add `--color` to Jest command line to get colors even when running through lerna.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "audit:fix": "lerna exec --parallel -- npm audit fix",
     "clean": "lerna clean",
     "install": "rm examples/cv/package-lock.json; rm examples/national-registration/package-lock.json; lerna exec -- npm i",
-    "lint": "lerna exec --parallel -- npm run lint",
+    "lint": "lerna run --parallel lint",
     "start": "docker-compose -f docker-compose.dev.yml down && docker-compose down && docker-compose up -d && docker-compose -f docker-compose.dev.yml up -d",
     "test": "npm run lint && npm run test:unit && npm run test:e2e",
-    "test:e2e": "sh -c 'cd ./e2e && ./script.sh'",
-    "test:unit": "lerna exec --parallel -- npm test",
+    "test:e2e": "sh -c 'cd ./e2e && npm run test'",
+    "test:unit": "lerna run --parallel --no-bail --ignore egendata-e2e test",
     "update": "lerna exec --parallel -- npm update",
     "version:patch": "lerna version patch",
     "version:minor": "lerna version minor",
