--- a/operator/package.json
+++ b/operator/package.json
@@ -6,7 +6,7 @@
     "start": "node ./lib/server.js",
     "start:watch": "nodemon ./lib/server.js",
     "dev": "npm run migrate up && NODE_ENV=development nodemon --inspect ./lib/server.js",
-    "test": "jest -c jest.config.js",
+    "test": "jest -c jest.config.js --color",
     "test:watch": "jest -c jest.config.js --watchAll",
     "test:debug": "node --inspect-brk node_modules/jest/bin/jest -c jest.config.js --runInBand",
     "integration": "jest -c jest.integration.config.js",
