refactor: 💡 travis lint-and-test stage (#135)
* refactor: 💡 travis lint-and-test stage

now runs unit tests also

Closes: trello #250
https://trello.com/c/21VJtPVx/250-make-travis-run-unit-tests-again

* Use npm script test do run all the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,7 @@ jobs:
     - docker load -i ~/.cache/docker/postgres.tar || true
     - npm run install
     script:
-    - npm run lint
-    - npm run test:e2e
+    - npm run test
     after_script:
     - docker save node -o ~/.cache/docker/node.tar
     - docker save redis -o ~/.cache/docker/redis.tar
